monitoring/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector-http
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: otel.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-collector-gateway
                port:
                  number: 4318
